# src/controllers/DefaultController.ts
@@ -10,6 +10,7 @@ import Controller from './Controller'
 import * as service from '../services/DefaultService'
 import { OpenApiRequest } from 'express-openapi-validator/dist/framework/types'
 import { Response } from 'express'
+import bodyData from 'body-data'
 
 export const apiFacercgGET = async (request: OpenApiRequest, response: Response) => {
     await Controller.handleRequest(request, response, service.apiFacercgGET)
@@ -28,7 +29,7 @@ export const apiPixelArtPOST = async (request: OpenApiRequest, response: Respons
 }
 
 export const apiKFCCrazyThursdayGET = async (request: OpenApiRequest, response: Response) => {
-    response.writeHead(200, {'Content-Type': 'text/html;charset=utf-8'});//设置response编码为utf-8
+    response.writeHead(200, { 'Content-Type': 'text/html;charset=utf-8' }) //设置response编码为utf-8
     await Controller.handleRequest(request, response, service.apiKFCCrazyThursdayGET)
 }
 
@@ -38,4 +39,31 @@ export const apiQrcodeGET = async (request: OpenApiRequest, response: Response) 
 
 export const apiTranslateGET = async (request: OpenApiRequest, response: Response) => {
     await Controller.handleRequest(request, response, service.apiTranslateGET)
+}
+
+export const apiWebstackScreenshotGET = async (request: OpenApiRequest, response: Response) => {
+    function cache(cache: number | boolean | undefined): string | undefined {
+        // Do not use http forced caching
+        // catch is false or cache is zero
+        if (cache === false || cache === 0) return undefined
+
+        const sec = Math.abs(cache as number)
+        const daySec = 86400
+        const cacheKey = 'public, no-transform, s-maxage=$, max-age=$'
+
+        if (!cache) return cacheKey.replace(/\$/g, daySec.toString())
+
+        if (isNumber(sec)) return cacheKey.replace(/\$/g, sec.toString())
+
+        return undefined
+    }
+    function isNumber(value: number) {
+        return !isNaN(value)
+    }
+    const data = await bodyData(request)
+
+    //@ts-ignore
+    const cacheResult = cache(data.cache)
+    if (cacheResult) response.setHeader('Cache-Control', cacheResult)
+    await Controller.handleRequest(request, response, service.apiWebstackScreenshotGET)
 }
